# dual-g2-high-power-motor-driver-rpi

./: .gitignore  CMakeLists.txt  README.md
apps/motor/: CMakeLists.txt  driver.c
data/: position.txt
include/: encoder.h  filter.h  loop_timer.h  motor.h
scripts/: launch_redis_server.sh
src/: encoder.c  filter.c  loop_timer.c  motor.c
test/: CMakeLists.txt
test/encoder/: CMakeLists.txt  test.c
test/filter/: CMakeLists.txt  test.c
test/motor/: CMakeLists.txt  test.c
test/redis/: CMakeLists.txt  test.c
test/thread/: CMakeLists.txt  test.c
test/timer/: CMakeLists.txt  test.c
